tests/sema/fail/v17_fail_block_scope_leak.ep
# COMPILE_FAIL: undefined variable x
fun run(): i64 {
    if true {
        let x = 1
    }
    ret x
}

fun main(): void {
    exit(run())
}
